fix: 🚑 fix english translation for the "creating commit" message

--- a/locales/strings.yml
+++ b/locales/strings.yml
@@ -23,8 +23,8 @@ _version: 2
 '4V2f':
   en: Press
   es: Presione
-'4YdK':
-  en: commit
+'4YCS':
+  en: " commit"
   es: ""
 '4arE':
   en: required
