i18n: 🌐 summary view i18n translation

--- a/locales/strings.yml
+++ b/locales/strings.yml
@@ -140,4 +140,15 @@ by8W:
 qR8p:
   en: A change that updates or adds translations (internationalization)
   es: Un cambio que actualiza o agrega traducciones (internacionalización)
-
+'3uHL':
+  en: Author
+  es: Autor
+Date:
+  en: Date
+  es: Fecha
+xrh1:
+  en: Commit
+  es: Commit
+'5BAM':
+  en: Press any key to quit...
+  es: Presione cualquier tecla para salir...
