feat: ✨ don't show the commit message if the user quitted prematurely

--- a/locales/strings.yml
+++ b/locales/strings.yml
@@ -152,3 +152,6 @@ xrh1:
 '5BAM':
   en: Press any key to quit...
   es: Presione cualquier tecla para salir...
+'6kq2':
+  en: The commit was aborted
+  es: El commit fue cancelado
